tests/paczka1/fuzzy1/19071654.err
Error in line 5: FpbJoffLq A199 1,6
Error in line 26: sjHLpf A568 61,1
Error in line 23: S120 A568 27,4
